[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://main/Character Controller/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31, 32 )

[node name="Caretaker" type="KinematicBody2D"]
position = Vector2( 499, 269 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RightWallRaycast1" type="RayCast2D" parent="."]
visible = false
rotation = -1.09956
cast_to = Vector2( 0, 40 )

[node name="LeftWallRaycast1" type="RayCast2D" parent="."]
visible = false
rotation = -4.18879
cast_to = Vector2( 0, 40 )

[node name="LeftWallRaycast2" type="RayCast2D" parent="."]
visible = false
rotation = 1.09956
cast_to = Vector2( 0, 40 )

[node name="RightWallRaycast2" type="RayCast2D" parent="."]
visible = false
rotation = 4.18879
cast_to = Vector2( 0, 40 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 42, 0 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
